Added United bootswatch

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel='stylesheet' type='text/css' href='{{ STATIC_URL }}lib/bootstrap/font-awesome.css'>
     <link rel='stylesheet' type='text/css' href='{{ STATIC_URL }}lib/bootstrap/bootstrap.no-icons.min.css'>
     <link rel='stylesheet' type='text/css' href='{{ STATIC_URL }}lib/angular/angular-ui.min.css'>
+    <link rel='stylesheet' type='text-css' href='{{ STATIC_URL }}lib/bootstrap/united.css'>
     <!-- ANGULAR STUFF -->
     <script src='{{ STATIC_URL }}js/app.js'></script>
     <script src='{{ STATIC_URL }}js/controllers/main.js'></script>
