wrap everything in verbatim tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,7 @@
 
   </head>
   <body>
+    {% verbatim %}
     <div class="container" ng-controller="MainCtrl">
       <div class="row">
         <div class="span8">
@@ -23,6 +24,6 @@
         </div>
       </div>
     </div>
-    {% verbatim %} {{ Don't parse me bro! }}{% endverbatim %}
+    {% endverbatim %}
   </body>
 </html>
