hard core static paths some more

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,8 @@
     <link rel='stylesheet' type='text/css' href='/static/lib/angular/angular-ui.min.css'>
     <link rel='stylesheet' type='text-css' href='/static/lib/bootstrap/united.css'>
     <!-- ANGULAR STUFF -->
-    <script src='{{ STATIC_URL }}js/app.js'></script>
-    <script src='{{ STATIC_URL }}js/controllers/main.js'></script>
+    <script src='/static/js/app.js'></script>
+    <script src='/static/js/controllers/main.js'></script>
 
   </head>
   <body>
