Added Google DFP ad tags script

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,8 @@
     <link rel='stylesheet' type='text/css' href='{{ STATIC_URL }}lib/bootstrap/bootstrap.no-icons.min.css'>
     <link rel='stylesheet' type='text/css' href='{{ STATIC_URL }}lib/angular/angular-ui.min.css'>
     <link rel='stylesheet' type='text-css' href='{{ STATIC_URL }}lib/bootstrap/united.css'>
+    <!-- OTHER DEPENDENCIES -->
+    <script src='{{ STATIC_URL }}js/dfp-ad-tags.js'></script>
     <!-- ANGULAR STUFF -->
     <script src='{{ STATIC_URL }}js/app.js'></script>
     <script src='{{ STATIC_URL }}js/controllers/main.js'></script>
