--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -1,1 +1,11 @@
-This is a topic page and your are checking the {{ topicId }} topic
+<h1>
+  <small>What is the best</small>
+  Topic Names for a Demo
+  <small>for 2012</small>
+</h1>
+
+<div ng-repeat="answer in answers" class="row-fluid">
+  <div class="span1">1</div>
+  <div class="span10">Word</div>
+  <div class="span1">999</div>
+</div>
