--- a/site_static/bestest.css
+++ b/site_static/bestest.css
@@ -1,3 +1,11 @@
+body {
+  margin-top: 50px;
+}
+
+.bestest-logo {
+  font-family: 'Satisfy', sans-serif;
+}
+
 h1 {
 	text-transform: uppercase;
 }
