First draft of getting models

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,7 @@
     <title>The Bestest</title>
     <script src='/static/lib/angular/angular.js'></script>
     <script src='/static/lib/angular/angular-ui.min.js'></script>
+    <script src='/static/lib/angular/angular-resource.min.js'></script>
     <script src='/static/lib/jquery/jquery.js'></script>
     <script src='/static/lib/bootstrap/bootstrap.min.js'></script>
     <link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/font-awesome.css'>
@@ -15,6 +16,8 @@
     <script src='{{ STATIC_URL }}js/dfp-ad-tags.js'></script>
     <!-- ANGULAR STUFF -->
     <script src='/static/js/app.js'></script>
+    <script src='/static/js/values.js'></script>
+    <script src='/static/js/factories/models.js'></script>
     <script src='/static/js/controllers/main.js'></script>
     <script src='/static/js/controllers/topic.js'></script>
 
