Create answers working

--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -12,11 +12,11 @@
 
 
 <div class="control-group">
-  <input ng-model="newAnswer">
+  <input ng-model="newEntry">
   <div
     class="btn"
-    ng-disabled="!newAnswer"
-    ng-click="addNewAnswer(newAnswer)">
+    ng-disabled="!newEntry"
+    ng-click="addNewEntry(newEntry)">
     Add new answer!!!
   </div>
 </div>
