--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -1,13 +1,13 @@
 <h1>
   <small>What is the best</small>
-  Topic Names for a Demo
+  {{ topic.name }}
   <small>for 2012</small>
 </h1>
 
-<div ng-repeat="answer in answers" class="row-fluid">
-  <div class="span1">1</div>
-  <div class="span10">Word</div>
-  <div class="span1">999</div>
+<div ng-repeat="entry in topic.entries" class="row-fluid">
+  <div class="span1" ng-bind="$index+1"></div>
+  <div class="span10" ng-bind="entry.name"></div>
+  <div class="span1" ng-bind="entry.number_of_votes"></div>
 </div>
 
 
