--- a/site_static/bestest.css
+++ b/site_static/bestest.css
@@ -15,3 +15,10 @@ h1 {
     font-weight: bold;
     display: block;
   }
+
+  /* ADVERTISEMENTS */
+  .advertise-here-link {
+    display: block;
+    text-align: right;
+    width: 300px;
+  }
