--- a/templates/base.html
+++ b/templates/base.html
@@ -6,17 +6,19 @@
     <script src='/static/lib/angular/angular-ui.min.js'></script>
     <script src='/static/lib/jquery/jquery.js'></script>
     <script src='/static/lib/bootstrap/bootstrap.min.js'></script>
-    <link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/font-awesome.css'>
+    <script src='/static/lib/underscore.js'></script>
     <link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/bootstrap.no-icons.min.css'>
     <link rel='stylesheet' type='text/css' href='/static/lib/angular/angular-ui.min.css'>
     <link rel='stylesheet' type='text-css' href='/static/lib/bootstrap/united.css'>
+    <!--<link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/font-awesome.css'>-->
     <link rel='stylesheet' type='text-css' href='/static/bestest.css'>
     <!-- OTHER DEPENDENCIES -->
-    <script src='{{ STATIC_URL }}js/dfp-ad-tags.js'></script>
+    <!-- <script src='/static/js/dfp-ad-tags.js'></script>-->
     <!-- ANGULAR STUFF -->
     <script src='/static/js/app.js'></script>
     <script src='/static/js/controllers/main.js'></script>
     <script src='/static/js/controllers/topic.js'></script>
+    <script src='/static/js/directives/ad-tag.js'></script>
 
   </head>
   <body>
@@ -32,19 +34,23 @@
           </ul>
         </div>
       </div>
-    </div data-ending="navbar">
+    </div>
 
     <div class="container-fluid">
       <div class="row-fluid">
         <div class="span8">
           <div ng-view></div>
-        </div data-ending="span8">
+        </div>
         <div class="span4">
-          Sidebar
-        </div data-ending="span4">
-      </div data-ending="row">
-    </div data-ending="container">
-  </div data-ending="MainCtrl">
+          <ad-tag ad-unit="The_Best" width="300" height="250">
+            <!-- <div id="{{adUnitDivId}}" style=width:{{width}}px; height:{{height}}px;""></div> -->
+            <img src="{{displayAd}}" width="{{width}}" height="{{height}}">
+            <small class="advertise-here-link"><a href="#">Advertise Here</a></small>
+          </ad-tag>
+        </div>
+      </div>
+    </div>
+  </div>
   {% endverbatim %}
   </body>
 </html>
