--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,7 @@
     <script src='/static/js/app.js'></script>
     <script src='/static/js/values.js'></script>
     <script src='/static/js/factories/models.js'></script>
+    <script src='/static/js/factories/pagination.js'></script>
     <script src='/static/js/controllers/main.js'></script>
     <script src='/static/js/controllers/topic.js'></script>
     <script src='/static/js/directives/ad-tag.js'></script>
