--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,9 @@
     <link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/bootstrap.no-icons.min.css'>
     <link rel='stylesheet' type='text/css' href='/static/lib/angular/angular-ui.min.css'>
     <link rel='stylesheet' type='text-css' href='/static/lib/bootstrap/united.css'>
-    <!--<link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/font-awesome.css'>-->
-    <link rel='stylesheet' type='text-css' href='/static/bestest.css'>
+    <link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/font-awesome.css'>
+    <!-- <link rel='stylesheet' type='text-css' href='/static/css/carousel.css'> -->
+    <link rel='stylesheet' type='text-css' href='/static/css/bestest.css'>
     <!-- OTHER DEPENDENCIES -->
     <!-- <script src='/static/js/dfp-ad-tags.js'></script>-->
     <!-- ANGULAR STUFF -->
@@ -23,6 +24,7 @@
     <script src='/static/js/controllers/main.js'></script>
     <script src='/static/js/controllers/topic.js'></script>
     <script src='/static/js/directives/ad-tag.js'></script>
+    <!--<script src='/static/js/directives/carousel.js'></script>-->
 
   </head>
   <body>
@@ -46,9 +48,12 @@
           <div ng-view></div>
         </div>
         <div class="span4">
+
+          <carousel id="faavoritesCarousel" data-items="favorites"></carousel>
+
           <ad-tag ad-unit="The_Best" width="300" height="250">
             <!-- <div id="{{adUnitDivId}}" style=width:{{width}}px; height:{{height}}px;""></div> -->
-            <img src="{{displayAd}}" width="{{width}}" height="{{height}}">
+            <img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}">
             <small class="advertise-here-link"><a href="#">Advertise Here</a></small>
           </ad-tag>
         </div>
