move underscore to match other libs

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <script src='/static/lib/angular/angular-resource.min.js'></script>
     <script src='/static/lib/jquery/jquery.js'></script>
     <script src='/static/lib/bootstrap/bootstrap.min.js'></script>
-    <script src='/static/lib/underscore.js'></script>
+    <script src='/static/lib/underscore/underscore.js'></script>
     <link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/bootstrap.no-icons.min.css'>
     <link rel='stylesheet' type='text/css' href='/static/lib/angular/angular-ui.min.css'>
     <link rel='stylesheet' type='text-css' href='/static/lib/bootstrap/united.css'>
