normalize quote use in base

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,29 +2,29 @@
 <html ng-app="ngView">
   <head>
     <title>The Bestest</title>
-    <script src='/static/lib/angular/angular.js'></script>
-    <script src='/static/lib/angular/angular-ui.min.js'></script>
-    <script src='/static/lib/angular/angular-resource.min.js'></script>
-    <script src='/static/lib/jquery/jquery.js'></script>
-    <script src='/static/lib/bootstrap/bootstrap.min.js'></script>
-    <script src='/static/lib/underscore/underscore.js'></script>
-    <link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/bootstrap.no-icons.min.css'>
-    <link rel='stylesheet' type='text/css' href='/static/lib/angular/angular-ui.min.css'>
-    <link rel='stylesheet' type='text-css' href='/static/lib/bootstrap/united.css'>
-    <link rel='stylesheet' type='text/css' href='/static/lib/bootstrap/font-awesome.css'>
-    <!-- <link rel='stylesheet' type='text-css' href='/static/css/carousel.css'> -->
-    <link rel='stylesheet' type='text-css' href='/static/css/bestest.css'>
+    <script src="/static/lib/angular/angular.js"></script>
+    <script src="/static/lib/angular/angular-ui.min.js"></script>
+    <script src="/static/lib/angular/angular-resource.min.js"></script>
+    <script src="/static/lib/jquery/jquery.js"></script>
+    <script src="/static/lib/bootstrap/bootstrap.min.js"></script>
+    <script src="/static/lib/underscore/underscore.js"></script>
+    <link rel="stylesheet" type="text/css" href="/static/lib/bootstrap/bootstrap.no-icons.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/lib/angular/angular-ui.min.css">
+    <link rel="stylesheet" type="text-css" href="/static/lib/bootstrap/united.css">
+    <link rel="stylesheet" type="text/css" href="/static/lib/bootstrap/font-awesome.css">
+    <!-- <link rel="stylesheet" type="text-css" href="/static/css/carousel.css"> -->
+    <link rel="stylesheet" type="text-css" href="/static/css/bestest.css">
     <!-- OTHER DEPENDENCIES -->
-    <!-- <script src='/static/js/dfp-ad-tags.js'></script>-->
+    <!-- <script src="/static/js/dfp-ad-tags.js"></script>-->
     <!-- ANGULAR STUFF -->
-    <script src='/static/js/app.js'></script>
-    <script src='/static/js/values.js'></script>
-    <script src='/static/js/factories/models.js'></script>
-    <script src='/static/js/factories/pagination.js'></script>
-    <script src='/static/js/controllers/main.js'></script>
-    <script src='/static/js/controllers/topic.js'></script>
-    <script src='/static/js/directives/ad-tag.js'></script>
-    <!--<script src='/static/js/directives/carousel.js'></script>-->
+    <script src="/static/js/app.js"></script>
+    <script src="/static/js/values.js"></script>
+    <script src="/static/js/factories/models.js"></script>
+    <script src="/static/js/factories/pagination.js"></script>
+    <script src="/static/js/controllers/main.js"></script>
+    <script src="/static/js/controllers/topic.js"></script>
+    <script src="/static/js/directives/ad-tag.js"></script>
+    <!--<script src="/static/js/directives/carousel.js"></script>-->
 
   </head>
   <body>
