Basic notification box

--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -24,6 +24,9 @@
   </div>
 </div>
 
+<div my-plot topic="topic">
+</div>
+
 <div
   ng-repeat="entry in pagination.getSelection()"
   class="row-fluid">
