--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
     <script src='/static/js/factories/pagination.js'></script>
     <script src='/static/js/controllers/main.js'></script>
     <script src='/static/js/controllers/topic.js'></script>
+    <script src='/static/js/directives/notification-box.js'></script>
     <script src='/static/js/directives/ad-tag.js'></script>
     <!--<script src='/static/js/directives/carousel.js'></script>-->
 
@@ -41,6 +42,8 @@
         </div>
       </div>
     </div>
+
+    <notification-box></notification-box>
 
     <div class="container-fluid">
       <div class="row-fluid">
