--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
     <script src="/static/js/controllers/topic.js"></script>
     <script src="/static/js/directives/notification-box.js"></script>
     <script src="/static/js/directives/ad-tag.js"></script>
-    <!--<script src="/static/js/directives/carousel.js"></script>-->
+    <script src="/static/js/directives/carousel.js"></script>
 
   </head>
   <body>
