--- a/site_static/css/carousel.css
+++ b/site_static/css/carousel.css
@@ -33,7 +33,7 @@
   margin: 0;
 }
 
-.angular-bootstrap-caroursel .block-controls a {
+/*.angular-bootstrap-caroursel .block-controls a {
 	text-decoration: none;
   background-color: transparent;
   line-height: 0;
@@ -41,4 +41,4 @@
 
 .angular-bootstrap-caroursel .block-controls a.active {
 	background-color: #ddd;
-}
+}*/
