--- a/templates/base.html
+++ b/templates/base.html
@@ -53,8 +53,7 @@
         </div>
         <div class="span4">
 
-          <div class="lead favourites-lead">What is your favourite</div>
-          <carousel id="favouritesCarousel" data-items="favourites"></carousel>
+          <carousel id="favouritesCarousel" class="favourites-wrapper" data-items="favourites"></carousel>
 
           <ad-tag ad-unit="The_Best" width="300" height="250">
             <!-- <div id="{{adUnitDivId}}" style=width:{{width}}px; height:{{height}}px;""></div> -->
