Notifications on voting and entry creation

--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -35,7 +35,7 @@
   </div>
   <div class="span10" ng-bind="entry.name"></div>
   <div class="span1" ng-bind="entry.number_of_votes"></div>
-  <div class="btn pull-right" ng-click="addVote(entry.id)">+</div>
+  <div class="btn pull-right" ng-click="addVote(entry)">+</div>
 </div>
 
 
