Ads - exclaimation mark

--- a/templates/base.html
+++ b/templates/base.html
@@ -60,6 +60,9 @@
             <img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}">
             <small class="advertise-here-link"><a href="#">Advertise Here</a></small>
           </ad-tag>
+
+          <h3>People on <i style="color: #9AE4E8;" class="icon-twitter"></i> are asking...</h3>
+          
         </div>
       </div>
     </div>
