--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -35,6 +35,7 @@
   </div>
   <div class="span10" ng-bind="entry.name"></div>
   <div class="span1" ng-bind="entry.number_of_votes"></div>
+  <span>Last voted on {{ entry | lastVoted }}
   <div class="btn pull-right" ng-click="addVote(entry)">+</div>
 </div>
 
