--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <!-- ANGULAR STUFF -->
     <script src="/static/js/app.js"></script>
     <script src="/static/js/values.js"></script>
+    <script src="/static/js/filters.js"></script>
     <script src="/static/js/factories/models.js"></script>
     <script src="/static/js/factories/pagination.js"></script>
     <script src="/static/js/controllers/main.js"></script>
