--- a/templates/base.html
+++ b/templates/base.html
@@ -58,11 +58,11 @@
           <ad-tag ad-unit="The_Best" width="300" height="250">
             <!-- <div id="{{adUnitDivId}}" style=width:{{width}}px; height:{{height}}px;""></div> -->
             <img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}">
-            <small class="advertise-here-link"><a href="#">Advertise Here</a></small>
+            <small class="advertise-here-link"><a href="/advertise">Advertise Here</a></small>
           </ad-tag>
 
           <h3>People on <i style="color: #9AE4E8;" class="icon-twitter"></i> are asking...</h3>
-          
+
         </div>
       </div>
     </div>
