--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
     <script src="/static/js/app.js"></script>
     <script src="/static/js/values.js"></script>
     <script src="/static/js/filters.js"></script>
+    <script src="/static/js/charts.js"></script>
     <script src="/static/js/factories/models.js"></script>
     <script src="/static/js/factories/pagination.js"></script>
     <script src="/static/js/controllers/main.js"></script>
@@ -29,6 +30,7 @@
     <script src="/static/js/directives/notification-box.js"></script>
     <script src="/static/js/directives/ad-tag.js"></script>
     <script src="/static/js/directives/carousel.js"></script>
+    <script src="/static/js/directives/chart.js"></script>
 
   </head>
   <body>
