--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <script src="/static/lib/angular/angular-resource.min.js"></script>
     <script src="/static/lib/bootstrap/bootstrap.min.js"></script>
     <script src="/static/lib/underscore/underscore.js"></script>
+    <script src="/static/lib/moment/moment.min.js"></script>
     <script src="/static/lib/flot/jquery.flot.min.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/lib/bootstrap/bootstrap.no-icons.min.css">
     <link rel="stylesheet" type="text/css" href="/static/lib/angular/angular-ui.min.css">
