--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
     <script src="/static/js/directives/notification-box.js"></script>
     <script src="/static/js/directives/ad-tag.js"></script>
     <script src="/static/js/directives/carousel.js"></script>
+    <script src="/static/js/directives/toggle.js"></script>
 
   </head>
   <body>
