--- a/site_static/css/bestest.css
+++ b/site_static/css/bestest.css
@@ -16,6 +16,13 @@ h1 {
     display: block;
   }
 
+/* PAGINATION */
+.pagination .page-numbers {
+  background: #ffffff;
+  border-top: 0;
+  border-bottom: 0
+}
+
 /* ADVERTISEMENTS */
 .advertise-here-link {
   display: block;
