--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
 
           <ad-tag ad-unit="The_Best" width="300" height="250">
             <!-- <div id="{{adUnitDivId}}" style=width:{{width}}px; height:{{height}}px;""></div> -->
-            <img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}">
+            <img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}" style="border:1px solid #ddd;">
             <small class="advertise-here-link"><a href="/advertise">Advertise Here</a></small>
           </ad-tag>
 
