Improvements showing last voted date

--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -35,7 +35,8 @@
   </div>
   <div class="span10" ng-bind="entry.name"></div>
   <div class="span1" ng-bind="entry.number_of_votes"></div>
-  <span>Last voted {{ entry | lastVoted }}
+  <small ng-show="entry.number_of_votes">Last voted {{ entry | lastVoted }}</small>
+  <small ng-hide="entry.number_of_votes">This item has no votes</small>
   <div class="btn pull-right" ng-click="addVote(entry)">+</div>
 </div>
 
