--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
     <script src="/static/js/filters.js"></script>
     <script src="/static/js/factories/models.js"></script>
     <script src="/static/js/factories/pagination.js"></script>
+    <script src="/static/js/factories/topic.js"></script>
     <script src="/static/js/controllers/main.js"></script>
     <script src="/static/js/controllers/topic.js"></script>
     <script src="/static/js/directives/notification-box.js"></script>
