Advertise with The Bestest. For real

--- a/site_static/templates/notification-box.html
+++ b/site_static/templates/notification-box.html
@@ -1,4 +1,4 @@
-<div class="alert alert-success" toggle="visible">
+<div class="alert alert-success hide" toggle="visible">
   <strong ng-bind="title"></strong>
   <span ng-bind="text"></span>
 </div>
