--- a/templates/base.html
+++ b/templates/base.html
@@ -43,7 +43,7 @@
     <div class="navbar navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container-fluid">
-          <a class="brand bestest-logo" href="#">The Bestest</a>
+          <a class="brand bestest-logo" href="/">The Bestest</a>
           <ul class="nav pull-right">
             <li><a href="#"><i class="icon-user"></i>Joe User</a></li>
           </ul>
