--- a/site_static/css/bestest.css
+++ b/site_static/css/bestest.css
@@ -2,8 +2,9 @@ body {
   margin-top: 50px;
 }
 
-.bestest-logo {
+.navbar .bestest-logo {
   font-family: 'Satisfy', sans-serif;
+  font-size: 25px;
 }
 
 h1 {
