Fun with ads. Moving on.

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,9 +62,9 @@
 
           <carousel id="favouritesCarousel" class="favourites-wrapper" data-items="favourites"></carousel>
 
-          <ad-tag ad-unit="The_Best" width="300" height="250">
+          <ad-tag ad-unit="The_Best" width="300" height="250" tags="tags">
             <!-- <div id="{{adUnitDivId}}" style=width:{{width}}px; height:{{height}}px;""></div> -->
-            <img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}" style="border:1px solid #ddd;">
+            <a href="/advertise"><img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}" style="border:1px solid #ddd;"></a>
             <small class="advertise-here-link"><a href="/advertise">Advertise Here</a></small>
           </ad-tag>
 
