--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -1,3 +1,4 @@
+<div ng-show="!!topic.name">
 <h1>
   <small>What is the best</small>
   {{ topic.name }}
@@ -72,3 +73,4 @@
 </div>
 
 <chart topic="topic"></chart>
+</div>
