--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
     <script src="/static/js/factories/topic.js"></script>
     <script src="/static/js/controllers/main.js"></script>
     <script src="/static/js/controllers/topic.js"></script>
+    <script src="/static/js/controllers/latest.js"></script>
     <script src="/static/js/directives/notification-box.js"></script>
     <script src="/static/js/directives/ad-tag.js"></script>
     <script src="/static/js/directives/carousel.js"></script>
