--- a/site_static/css/bestest.css
+++ b/site_static/css/bestest.css
@@ -11,11 +11,45 @@ h1 {
   text-transform: uppercase;
 }
 
-  h1 small {
-    font-size: 40%;
-    font-weight: bold;
-    display: block;
-  }
+h1 small {
+  font-size: 40%;
+  font-weight: bold;
+  display: block;
+  margin-bottom: -5px;
+}
+
+h1 small.pull-right {
+  margin-left: 4px;
+}
+
+/* TOPICS */
+
+.answer-row {
+  height: 40px;
+  line-height: 30px;
+  font-size: 150%;
+  color: #757575;
+}
+
+.answer-row .rank, 
+.answer-row .name, 
+.answer-row .votes {
+  display: inline-block;
+}
+
+.answer-row .name {
+  color: #222;
+}
+
+.answer-row .vote-up {
+  color: #757575;
+  font-size: 40px;
+  line-height: 40px;
+}
+.answer-row .vote-up:hover {
+  color: #222222;
+  cursor: pointer;
+}
 
 /* PAGINATION */
 .pagination .page-numbers {
@@ -29,6 +63,7 @@ h1 {
   display: block;
   text-align: right;
   width: 300px;
+  margin: 0 auto;
 }
 
 /* CAROUSEL */
@@ -55,7 +90,7 @@ h1 {
   -moz-border-radius: 5px;
   border-radius: 5px;
   position: absolute;
-  top: 4px;
+  top: 12px;
   left: 4px;
 }
 
@@ -71,4 +106,13 @@ h1 {
 .twitter-logo,
 .twitter-row .handle:hover {
   color: #9AE4E8;
+}
+
+/* UTILITIES */
+.text-right {
+  text-align: right;
+}
+
+.text-center {
+  text-align: center;
 }
