--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -1,8 +1,4 @@
-<h1>
-  <small>What is the best</small>
-  {{ topic.name }}
-  <small>for 2012</small>
-</h1>
+<question-header ask="topic.name" year="topic.year" location="topic.location"></question-header>
 
 <div class="pagination btn-group">
   <div
@@ -29,15 +25,16 @@
 
 <div
   ng-repeat="entry in pagination.getSelection()"
-  class="row-fluid">
-  <div class="span1"
+  class="row-fluid answer-row clearfix">
+  <div class="span1 rank text-right"
     ng-bind="$index + 1 + (pagination.getCurrentPage())*pagination.getElementsPerPage()">
   </div>
-  <div class="span10" ng-bind="entry.name"></div>
-  <div class="span1" ng-bind="entry.number_of_votes"></div>
-  <small ng-show="entry.number_of_votes">Last voted {{ entry | lastVoted }}</small>
-  <small ng-hide="entry.number_of_votes">This item has no votes</small>
-  <div class="btn pull-right" ng-click="addVote(entry)">+</div>
+  <div class="span9 name" ng-bind="entry.name"></div>
+  <div class="span1 votes text-right" ng-bind="entry.number_of_votes"></div>
+  <div class="span1 vote-up" ng-click="addVote(entry)"><i class="icon-sort-up"></i></div>
+  <!-- <small ng-show="entry.number_of_votes">Last voted {{ entry | lastVoted }}</small>
+  <small ng-hide="entry.number_of_votes">This item has no votes</small> -->
+
 </div>
 
 
