--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
     <script src="/static/js/factories/topic.js"></script>
     <script src="/static/js/controllers/main.js"></script>
     <script src="/static/js/controllers/topic.js"></script>
+    <script src="/static/js/directives/question-header.js"></script>
     <script src="/static/js/directives/notification-box.js"></script>
     <script src="/static/js/directives/ad-tag.js"></script>
     <script src="/static/js/directives/carousel.js"></script>
@@ -62,11 +63,13 @@
 
           <carousel id="favouritesCarousel" class="favourites-wrapper" data-items="favourites"></carousel>
 
-          <ad-tag ad-unit="The_Best" width="300" height="250" tags="tags">
-            <!-- <div id="{{adUnitDivId}}" style=width:{{width}}px; height:{{height}}px;""></div> -->
-            <a href="/advertise"><img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}" style="border:1px solid #ddd;"></a>
-            <small class="advertise-here-link"><a href="/advertise">Advertise Here</a></small>
-          </ad-tag>
+          <div class="text-center">
+              <ad-tag ad-unit="The_Best" width="300" height="250" tags="tags">
+              <!-- <div id="{{adUnitDivId}}" style=width:{{width}}px; height:{{height}}px;""></div> -->
+              <a href="/advertise"><img ng-src="{{displayAd}}" width="{{width}}" height="{{height}}" style="border:1px solid #ddd;"></a>
+              <small class="advertise-here-link"><a href="/advertise">Advertise Here</a></small>
+            </ad-tag>
+          </div>
 
           <h3>People on <i class="icon-twitter twitter-logo" title="Twitter"></i> are asking...</h3>
 
