--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -69,5 +69,7 @@
   </div>
 </div>
 
-<chart topic="topic"></chart>
+<chart topic="topic">
+  <div class="chart" style="width:1000px; height:300px;"></div>
+</chart>
 </div>
