--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -70,6 +70,6 @@
 </div>
 
 <chart topic="topic">
-  <div class="chart" style="width:1000px; height:300px;"></div>
+  <div class="chart" style="height:300px;"></div>
 </chart>
 </div>
