--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -6,7 +6,7 @@
     style="margin:2px"
     ng-repeat="tag in topic.tags"
     ng-bind="tag.name"
-    ng-click="removeTag(topic, tag)"
+    ng-click="goToTag(tag)"
     class="label label-warning">
   </span>
 </div>
