--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,7 @@
     <script src="/static/js/controllers/main.js"></script>
     <script src="/static/js/controllers/topic.js"></script>
     <script src="/static/js/controllers/latest.js"></script>
+    <script src="/static/js/controllers/by-tag.js"></script>
     <script src="/static/js/directives/question-header.js"></script>
     <script src="/static/js/directives/notification-box.js"></script>
     <script src="/static/js/directives/ad-tag.js"></script>
