--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -36,15 +36,28 @@
 
 <div
   ng-repeat="entry in pagination.getSelection()"
-  class="row-fluid answer-row clearfix">
-  <div class="span1 rank text-right"
-    ng-bind="$index + 1 + (pagination.getCurrentPage())*pagination.getElementsPerPage()">
+  class="answer-row clearfix">
+  <div class="row-fluid" delayed-hover="$index">
+    <div class="span1 rank text-right"
+      ng-bind="$index + 1 + (pagination.getCurrentPage())*pagination.getElementsPerPage()">
+    </div>
+    <div class="span9 name" ng-bind="entry.name"></div>
+    <div class="span1 votes text-right" ng-bind="entry.number_of_votes"></div>
+    <div class="span1 vote-up" ng-click="addVote(entry)"><i class="icon-sort-up"></i></div>
+      <div class="span11 offset1 expanded-row hide" toggle="expandAnswerId==$index">
+        <span class="label label-info">Vote Up</span>
+        <span class="label label-info">Show Comments</span>
+      <small ng-show="entry.number_of_votes">Last voted {{ entry | lastVoted }}</small>
+      <small ng-hide="entry.number_of_votes">This item has no votes</small>
+      </div>
   </div>
-  <div class="span9 name" ng-bind="entry.name"></div>
-  <div class="span1 votes text-right" ng-bind="entry.number_of_votes"></div>
-  <div class="span1 vote-up" ng-click="addVote(entry)"><i class="icon-sort-up"></i></div>
-  <!-- <small ng-show="entry.number_of_votes">Last voted {{ entry | lastVoted }}</small>
-  <small ng-hide="entry.number_of_votes">This item has no votes</small> -->
+  <div class="row-fluid hide" toggle="expandAnswerId==$index">
+    <div class="span12">
+      Showing {{$index}}
+    <!-- <small ng-show="entry.number_of_votes">Last voted {{ entry | lastVoted }}</small>
+    <small ng-hide="entry.number_of_votes">This item has no votes</small> -->
+    </div>
+  </div>
 
 </div>
 
