--- a/templates/base.html
+++ b/templates/base.html
@@ -38,6 +38,7 @@
     <script src="/static/js/directives/chart.js"></script>
     <script src="/static/js/directives/toggle.js"></script>
     <script src="/static/js/directives/twitter-questions.js"></script>
+    <script src="/static/js/directives/delayed-hover.js"></script>
 
   </head>
   <body>
