--- a/templates/base.html
+++ b/templates/base.html
@@ -28,6 +28,7 @@
     <script src="/static/js/factories/topic.js"></script>
     <script src="/static/js/controllers/main.js"></script>
     <script src="/static/js/controllers/topic.js"></script>
+    <script src="/static/js/controllers/create-topic.js"></script>
     <script src="/static/js/controllers/latest.js"></script>
     <script src="/static/js/controllers/by-tag.js"></script>
     <script src="/static/js/directives/question-header.js"></script>
