--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <script src="/static/lib/underscore/underscore.js"></script>
     <script src="/static/lib/moment/moment.min.js"></script>
     <script src="/static/lib/flot/jquery.flot.min.js"></script>
+    <script src="/static/js/fixtures/votes.js"></script>
     <link rel="stylesheet" type="text/css" href="/static/lib/bootstrap/bootstrap.no-icons.min.css">
     <link rel="stylesheet" type="text/css" href="/static/lib/angular/angular-ui.min.css">
     <link rel="stylesheet" type="text-css" href="/static/lib/bootstrap/united.css">
@@ -31,11 +32,13 @@
     <script src="/static/js/controllers/create-topic.js"></script>
     <script src="/static/js/controllers/latest.js"></script>
     <script src="/static/js/controllers/by-tag.js"></script>
+    <script src="/static/js/controllers/visualizer.js"></script>
     <script src="/static/js/directives/question-header.js"></script>
     <script src="/static/js/directives/notification-box.js"></script>
     <script src="/static/js/directives/ad-tag.js"></script>
     <script src="/static/js/directives/carousel.js"></script>
     <script src="/static/js/directives/chart.js"></script>
+    <script src="/static/js/directives/chart-offline.js"></script>
     <script src="/static/js/directives/toggle.js"></script>
     <script src="/static/js/directives/twitter-questions.js"></script>
     <script src="/static/js/directives/delayed-hover.js"></script>
