Last call changes?

--- a/site_static/templates/topic.html
+++ b/site_static/templates/topic.html
@@ -83,7 +83,7 @@
     Add
   </button>
 
-  <a href="/visualize/{{topic.id}}" class="btn icon-bar-chart pull-right"> Graph votes over time</a>
+  <a href="/visualizer/{{topic.id}}" class="btn icon-bar-chart pull-right"> Graph votes over time</a>
 </div>
 
 <!-- <div class="navbar navbar-fixed-bottom">
