--- a/site_static/templates/visualizer.html
+++ b/site_static/templates/visualizer.html
@@ -1,5 +1,5 @@
 <div>
-<question-header ask="topic.name" year="topic.year" location="topic.location"></question-header>
+<question-header ask="topic.name" year="yearFilter" location="topic.location"></question-header>
 
 <div
   ng-repeat="entry in entries"
