--- a/templates/base.html
+++ b/templates/base.html
@@ -68,6 +68,15 @@
         </div>
         <div class="span4">
 
+          <div class="well location-targeting text-center">It looks like you're in 
+            <div class="btn-group">
+              <a class="btn dropdown-toggle" href="#">
+                Toronto
+                <span class="caret"></span>
+              </a>
+              
+            </div></div>
+
           <carousel id="favouritesCarousel" class="favourites-wrapper" data-items="favourites"></carousel>
 
           <div class="text-center">
