--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
         </div>
         <div class="span4">
 
-          <div class="well location-targeting text-center">It looks like you're in 
+          <div class="well location-targeting text-center" ng-show="inToronto">It looks like you're in 
             <div class="btn-group">
               <a class="btn dropdown-toggle" href="#">
                 Toronto
